# 2careAI

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
apps/voice-gateway-ts/: package.json
apps/voice-gateway-ts/src/: server.ts
benchmarks/: latency_benchmark.py  latency_report.md
docs/: architecture.md
services/agent_py/app/: main.py
services/identity_py/app/: main.py
services/memory_py/app/: main.py
services/scheduler_py/app/: main.py
shared/: latency.py  models.py
tests/: test_agent_helpers.py  test_campaign_worker.py  test_scheduler.py
workers/campaign_py/: outbound_outcomes.jsonl
workers/campaign_py/app/: main.py
