[project]
name = "2careai-voice-agent"
version = "0.1.0"
description = "Real-time multilingual clinical appointment booking agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "redis>=5.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
